fix alignment of house icon with text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,11 @@ i {
   height: 4rem;
 }
 
+i:last-child {
+  position: relative;
+  top: .1rem;
+}
+
 footer {
   font-size: 1.5rem;
   font-weight: 100;
